--- a/src/app/iniciarsesion/iniciarsesion.page.html
+++ b/src/app/iniciarsesion/iniciarsesion.page.html
@@ -1,13 +1,50 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>iniciarsesion</ion-title>
+    <ion-title>iniciar-sesion</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">iniciarsesion</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12">
+        <ion-card>
+          <ion-card-header>
+            <ion-card-title>
+              Bienvenido
+            </ion-card-title>
+            <ion-card-subtitle>
+              Ingresa tus datos para iniciar sesión
+            </ion-card-subtitle>
+          </ion-card-header>
+          <ion-card-content>
+            <form [formGroup]="formulario" (submit)="validarFormulario()">
+              <ion-grid>
+                <ion-row>
+                  <ion-col>
+                    <ion-input formControlName="usuario" label="Ingrese su usuario" labelPlacement="floating" fill="outline" type="text"></ion-input>
+                  </ion-col>
+                </ion-row>
+                <ion-row>
+                  <ion-col>
+                    <ion-input formControlName="contrasenia" label="Ingrese su contraseña" labelPlacement="floating" fill="outline" type="password"></ion-input>
+                  </ion-col>
+                </ion-row>
+                <ion-row>
+                  <ion-col>
+                    <ion-button role="submit" type="submit" expand="block" [disabled]="cargando_bloqueo">
+                      <ion-text *ngIf="!cargando_bloqueo">
+                        Iniciar sesión
+                      </ion-text>
+                      <ion-spinner *ngIf="cargando_bloqueo" name="circular"></ion-spinner>
+                    </ion-button>
+                  </ion-col>
+                </ion-row>
+              </ion-grid>
+            </form>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
