--- a/src/app/productos/productos.page.html
+++ b/src/app/productos/productos.page.html
@@ -1,30 +1,36 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>productos</ion-title>
+    <ion-title class="ion-text-center ion-text-large">Catálogo</ion-title>
+    <ion-buttons slot="start">
+      <ion-button expand="full" color="danger" (click)="salir()">Salir</ion-button>
+    </ion-buttons>
   </ion-toolbar>
+  
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-grid>
     <ion-row>
       <ion-col>
-        <ion-toolbar>
-          <ion-title>Cantidad</ion-title>
-        </ion-toolbar>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>
         <ion-list *ngIf="productos">
-          <ion-item *ngFor="let producto of productos" >
-            <ion-avatar aria-hidden="true" slot="start">
-              <img alt="" [src]="producto.thumbnail" />
-            </ion-avatar>
-            <ion-label>{{  producto.title }}</ion-label>
-            <ion-label> {{ producto.price }} </ion-label>
-          </ion-item>
+          <ion-card *ngFor="let producto of productos">
+            <ion-item lines="none">
+              <ion-avatar slot="start">
+                <img alt="" [src]="producto.thumbnail" />
+              </ion-avatar>
+              <ion-label>
+                <h2 class="ion-text-wrap ion-text-bold">{{ producto.title }}</h2>
+                <p class="ion-text-color-primary ion-text-medium" style="color: blue;">
+                  ${{ producto.price }}
+                </p>
+                <p class="ion-text-color-success ion-text-small" style="color: green;">
+                  {{ producto.discountPercentage }} %
+                </p>
+              </ion-label>
+              <ion-icon name="chevron-forward-outline" slot="end"></ion-icon>
+            </ion-item>
+          </ion-card>
         </ion-list>
       </ion-col>
     </ion-row>
   </ion-grid>
-</ion-content>
