--- a/src/app/iniciarsesion/iniciarsesion.page.html
+++ b/src/app/iniciarsesion/iniciarsesion.page.html
@@ -7,14 +7,13 @@
 <ion-content [fullscreen]="true">
   <ion-grid>
     <ion-row>
-      <ion-col size="12">
-        <ion-card>
+
           <ion-card-header>
             <ion-card-title>
-              Bienvenido
+              Bienvenido Usuario
             </ion-card-title>
             <ion-card-subtitle>
-              Ingresa tus datos para iniciar sesión
+              Porfavor ingrese sus datos
             </ion-card-subtitle>
           </ion-card-header>
           <ion-card-content>
@@ -43,8 +42,6 @@
               </ion-grid>
             </form>
           </ion-card-content>
-        </ion-card>
-      </ion-col>
     </ion-row>
   </ion-grid>
 </ion-content>
