--- a/src/app/iniciarsesion/iniciarsesion.page.html
+++ b/src/app/iniciarsesion/iniciarsesion.page.html
@@ -1,47 +1,64 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>iniciar-sesion</ion-title>
+    <ion-title>Iniciar sesión</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-grid>
-    <ion-row>
+  <ion-grid class="ion-align-items-center ion-justify-content-center">
+    <ion-row class="ion-justify-content-center">
+      <ion-col>
+        <div class="icono-centrado">
+          <img src="./../../assets/icon/vecteezy_user-icon-on-transparent-background_19879186.png" alt="Foto Icono">
+        </div>
+        <ion-title class="ion-text-center">
+          Bienvenido Usuario
+        </ion-title>
 
-          <ion-card-header>
-            <ion-card-title>
-              Bienvenido Usuario
-            </ion-card-title>
-            <ion-card-subtitle>
-              Porfavor ingrese sus datos
-            </ion-card-subtitle>
-          </ion-card-header>
-          <ion-card-content>
-            <form [formGroup]="formulario" (submit)="validarFormulario()">
+        <ion-card-content>
+          <form [formGroup]="formulario" (submit)="validarFormulario()">
+            <ion-card>
               <ion-grid>
-                <ion-row>
+                <ion-row class="ion-justify-content-center">
                   <ion-col>
-                    <ion-input formControlName="usuario" label="Ingrese su usuario" labelPlacement="floating" fill="outline" type="text"></ion-input>
-                  </ion-col>
-                </ion-row>
-                <ion-row>
-                  <ion-col>
-                    <ion-input formControlName="contrasenia" label="Ingrese su contraseña" labelPlacement="floating" fill="outline" type="password"></ion-input>
-                  </ion-col>
-                </ion-row>
-                <ion-row>
-                  <ion-col>
-                    <ion-button role="submit" type="submit" expand="block" [disabled]="cargando_bloqueo">
-                      <ion-text *ngIf="!cargando_bloqueo">
-                        Iniciar sesión
-                      </ion-text>
-                      <ion-spinner *ngIf="cargando_bloqueo" name="circular"></ion-spinner>
-                    </ion-button>
+                    <ion-input formControlName="usuario" label="Usuario" label-placement="floating" fill="solid" placeholder="" type="text"></ion-input>
                   </ion-col>
                 </ion-row>
               </ion-grid>
-            </form>
-          </ion-card-content>
+            </ion-card>
+            <ion-card>
+              <ion-grid>
+                <ion-row class="ion-justify-content-center">
+                  <ion-col>
+                    <ion-input formControlName="contrasenia" label="Contraseña" label-placement="floating" fill="solid" placeholder="" type="password"></ion-input>
+                  </ion-col>
+                </ion-row>
+              </ion-grid>
+            </ion-card>
+
+            <ion-row class="ion-justify-content-center">
+              <ion-col>
+                <ion-item>
+                  <ion-label>Recuérdame</ion-label>
+                  <ion-toggle formControlName="recordarme"></ion-toggle>
+                </ion-item>
+              </ion-col>
+            </ion-row>
+
+            <ion-row class="ion-justify-content-center">
+              <ion-col>
+                <ion-button role="submit" type="submit" expand="block" [disabled]="cargando_bloqueo">
+                  <ion-text *ngIf="!cargando_bloqueo">
+                    Iniciar sesión
+                  </ion-text>
+                  <ion-spinner *ngIf="cargando_bloqueo" name="circular"></ion-spinner>
+                </ion-button>
+              </ion-col>
+            </ion-row>
+            
+          </form>
+        </ion-card-content>
+      </ion-col>
     </ion-row>
   </ion-grid>
 </ion-content>
